--- a/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
@@ -9,7 +9,7 @@ To view the {devworkspace} Operator metrics on Grafana with the example dashboar
 
 * Grafana version 7.5.3 or later.
 
-* Grafana is running on port `3000` with a corresponding `service` and `route`. See link:https://grafana.com/docs/grafana/latest/installation/kubernetes/[Installing Grafana].
+* Grafana is running on port `3000` with a corresponding Service. See link:https://grafana.com/docs/grafana/latest/installation/kubernetes/[Installing Grafana].
 
 
 
