Address PR feedback
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/modules/administration-guide/examples/snip_che-create-monitoring-namespace.adoc
+++ b/modules/administration-guide/examples/snip_che-create-monitoring-namespace.adoc
@@ -1,4 +1,4 @@
-[subs="+attributes,quotes"]
+[source,terminal,subs="+attributes,quotes"]
 ----
 $ {orch-cli} create {orch-namespace} monitoring
 ----
