--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -8,7 +8,7 @@ To use Prometheus to collect, store, and query metrics about the {devworkspace} 
 
 * The `devworkspace-controller-metrics` Service is exposing metrics on port `8443`. This is preconfigured by default.
 
-* The `devworkspace-webhookserver` Service is exposing metrics on port `9443`. This is pre-configured by default.
+* The `devworkspace-webhookserver` Service is exposing metrics on port `9443`. This is preconfigured by default.
 
 * Prometheus 2.26.0 or later is running. The Prometheus console is running on port `9090` with a corresponding Service. See link:https://prometheus.io/docs/introduction/first_steps/[First steps with Prometheus].
 
@@ -39,7 +39,7 @@ roleRef:
 
 . Configure Prometheus to scrape metrics from port `8443` exposed by the `devworkspace-controller-metrics` Service and from port `9443` exposed by the `devworkspace-webhookserver` Service.
 +
-NOTE: The example monitoring stack already creates the `prometheus-config` ConfigMap with an empty configuration. To provide the Prometheus configuration details, edit the `data` field of the ConfigMap.
+NOTE: The xref:installing-prometheus-and-grafana.adoc[example monitoring stack] already creates the `prometheus-config` ConfigMap with an empty configuration. To provide the Prometheus configuration details, edit the `data` field of the ConfigMap.
 +
 .Prometheus configuration
 ====
@@ -78,29 +78,29 @@ data:
 <1> The rate at which a target is scraped.
 <2> The rate at which the recording and alerting rules are re-checked.
 <3> The resources that Prometheus monitors. In the default configuration, two jobs, `DevWorkspace` and `DevWorkspace webhooks`, scrape the time series data exposed by the `devworkspace-controller-metrics` and `devworkspace-webhookserver` Services.
-<4> Scrape metrics from port `8443`. Replace `__<DWO_namespace>__` with the {orch-namespace} where the `devworkspace-controller-metrics` `Service` is located.
-<5> Scrape metrics from port `9443`. Replace `__<DWO_namespace>__` with the {orch-namespace} where the `devworkspace-webhookserver` `Service` is located.
+<4> The scrape target for the metrics from port `8443`. Replace `__<DWO_{orch-namespace}>__` with the {orch-namespace} where the `devworkspace-controller-metrics` `Service` is located.
+<5> The scrape target for the metrics from port `9443`. Replace `__<DWO_{orch-namespace}>__` with the {orch-namespace} where the `devworkspace-webhookserver` `Service` is located.
 ====
 
 . Scale the `Prometheus` Deployment down and up to read the updated ConfigMap from the previous step.
 +
-[subs="+attributes,quotes"]
+[source,terminal,subs="+attributes,quotes"]
 ----
 $ {orch-cli} scale --replicas=0 deployment/prometheus -n monitoring && {orch-cli} scale --replicas=1 deployment/prometheus -n monitoring
 ----
 
-.Verification steps
+.Verification
 
 . Use port forwarding to access the `Prometheus` Service locally:
 +
-[subs="+attributes,quotes"]
+[source,terminal,subs="+attributes,quotes"]
 ----
 $ {orch-cli} port-forward svc/prometheus 9090:9090 -n monitoring
 ----
 . Verify that all targets are up by viewing the targets endpoint at `localhost:9090/targets`.
 . Use the Prometheus console to view and query metrics:
-** View the metrics at `localhost:9090/metrics`.
-** Query metrics from `localhost:9090/graph`.
+** The metrics are available at `localhost:9090/metrics`.
+** The metrics can be queried from `localhost:9090/graph`.
 +
 For more information, see link:https://prometheus.io/docs/introduction/first_steps/#using-the-expression-browser[Using the expression browser].
 
