--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -69,7 +69,7 @@ $ {orch-cli} label configmap custom-certs app.kubernetes.io/part-of=che.eclipse.
 
 == Troubleshooting imported certificate issues
 
-If issues occur after adding the certificates, verify the specified values at a {prod-short} installation and workspace level.
+If issues occur after adding the certificates, verify the specified values at the {prod-short} instance level and workspace level.
 
 
 .Verifying imported certificates at the {prod-short} installation level
