--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -72,7 +72,7 @@ $ {orch-cli} label configmap custom-certs app.kubernetes.io/part-of=che.eclipse.
 If issues occur after adding the certificates, verify the specified values at the {prod-short} instance level and workspace level.
 
 
-.Verifying imported certificates at the {prod-short} installation level
+.Verifying imported certificates at the {prod-short} instance level
 
 * In case of a {prod-short} link:https://docs.openshift.com/container-platform/latest/operators/understanding/olm-what-operators-are.html[Operator] deployment, the namespace where the `CheCluster` is located contains labeled ConfigMaps with the correct content:
 +
